# monograd

./: .gitignore  README.md  TODO.md  paper.md  pyproject.toml  slop_review.md  test-all.sh
.github/workflows/: ci.yml
examples/: mnist.py
extra/: pytorch_matmul_cuda_tflops.py  reduce_kernel_full.cl  reduce_kernel_strided.cl
lib/: mnist_loader.py
monograd/: __init__.py  device.py  dtype.py  nn.py  ops.py  optimizer.py  tensor.py  utils.py
monograd/engine/: codegen.py  optimize.py  schedule.py
monograd/mixin/: __init__.py  math.py  movement.py
monograd/nn/: __init__.py  datasets.py  optim.py
monograd/uop/: __init__.py  ops.py
test/: test_device.py  test_dtype.py  test_optimize.py  test_scheduler.py  test_tensor.py  test_uop.py
tests/: core.py  temp.py  test_ops.py  test_xor.py
