[project]
name = "monograd"
version = "0.1.1"
description = ""
authors = [
    {name = "lipeeeee",email = "filipe.pereirafga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
