[project]
name = "monograd"
version = "0.1.2"
description = ""
authors = [
    {name = "lipeeeee",email = "filipe.pereirafga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "numpy>=1.24.0",
  "pyopencl (>=2026.1.2,<2027.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
